--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<!-- Logo -->
 						<div id="logo">
 							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
-							<h1 id="title">Jane Doe</h1>
+							<h1 id="title">Adrian Policarpio</h1>
 							<p>Hyperspace Engineer</p>
 						</div>
 
@@ -205,4 +205,5 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
+
 </html>
